# OpticalImageProcessor

./: README.md
DOC/: Compilation_Guide.4.Ubuntu.txt  sample-task.sh
OpticalImageProcessor/: CMakeLists.txt  Compilation_Guide.4.Ubuntu.txt  Usage.txt  aux_separator.h  imageop.h  main.cpp  oipshared.h  preproc.h  sample-task.sh  sample-task.txt  stitcher.h  toolbox.h
OpticalImageProcessor.xcodeproj/: project.pbxproj
OpticalImageProcessor.xcodeproj/xcuserdata/stone.xcuserdatad/xcschemes/: xcschememanagement.plist
